tests/baselines/reference/annotationApplicationError25.errors.txt
tests/cases/conformance/annotations/B.ets(3,1): error TS28022: Annotation have to be applied for classes or methods in classes only, got: '@Available({minApiVersion: 'OpenHarmony 20'})
export namespace A1 {}'.
tests/cases/conformance/annotations/B.ets(6,1): error TS28022: Annotation have to be applied for classes or methods in classes only, got: '@Available({minApiVersion: 'OpenHarmony 20'})
export module A2 {}'.


==== tests/cases/conformance/annotations/A.d.ets (0 errors) ====
    export @interface Available {
        minApiVersion: string = "1";
    }
    
==== tests/cases/conformance/annotations/B.ets (2 errors) ====
    import { Available } from "./A";
    
    @Available({minApiVersion: 'OpenHarmony 20'})
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS28022: Annotation have to be applied for classes or methods in classes only, got: '@Available({minApiVersion: 'OpenHarmony 20'})
!!! error TS28022: export namespace A1 {}'.
    export namespace A1 {}
    
    @Available({minApiVersion: 'OpenHarmony 20'})
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS28022: Annotation have to be applied for classes or methods in classes only, got: '@Available({minApiVersion: 'OpenHarmony 20'})
!!! error TS28022: export module A2 {}'.
    export module A2 {}